WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269942
[WebAuthn] Overrelease in error for multi-origin credentials
https://bugs.webkit.org/show_bug.cgi?id=269942
Summary
[WebAuthn] Overrelease in error for multi-origin credentials
pascoe@apple.com
Reported
2024-02-22 13:40:04 PST
^
Attachments
V1
(1.48 KB, patch)
2024-02-27 15:48 PST
,
Richard Houle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2024-02-22 13:40:17 PST
<
rdar://problem/123357813
>
Richard Houle
Comment 2
2024-02-27 15:48:07 PST
Created
attachment 470079
[details]
V1
EWS
Comment 3
2024-02-28 14:43:24 PST
Committed
275466@main
(be2916dac989): <
https://commits.webkit.org/275466@main
> Reviewed commits have been landed. Closing PR #24973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug